--- a/Boogle.html
+++ b/Boogle.html
@@ -24,18 +24,30 @@
     <button class="button2">Klik na srečo</button>
 </div>
 
-<p>Google je na voljo v: Angleščina</p>
+<p>Google je na voljo v: <a class="Eng">English</a></p>
 
 </center>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+<div id="fbar">
 <div class="bottom">Slovenija</div>
 
 <div class="footer">
-  <a  href="#" class="foot">Oglaševanje</span>
-  <a href="#" class="foot">Posel</span>
-  <a href="#" class="foot">Predstavitev</span>
-</div>
+  <a  href="#" class="foot1">Oglaševanje</span>
+  <a href="#" class="foot2">Posel</span>
+  <a href="#" class="foot3">Predstavitev</span>
 
+    <a  href="#" class="foot4">Zasebnost</span>
+    <a href="#" class="foot5">Pogoji</span>
+    <a href="#" class="foot6">Nastavitve</span>
+</div>
+</div>
 
 
   </body>
